--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # ===== Python bytecode =====
-# __pycache__/
-# *.py[cod]
-# *$py.class
+__pycache__/
+*.py[cod]
+*$py.class
 
 
 # ===== Virtual environments =====
